--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/tailwindcss": "^5.3.3",
@@ -28,13 +26,16 @@
   "dependencies": {
     "@aws-amplify/ui-vue": "^3.0.4",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/vue-fontawesome": "^3.0.2",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "@headlessui/vue": "^1.4.2",
     "@jridgewell/sourcemap-codec": "^1.4.14",
     "@mdi/js": "^7.0.96",
     "@nuxtjs/auth-next": "^5.0.0-1637745161.ea53f98",
     "@rollup/plugin-inject": "^5.0.3",
     "@rollup/plugin-terser": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@vueup/vue-quill": "^1.0.1",
     "aws-amplify": "^5.0.5",
     "chart.js": "^3.9.1",
@@ -44,9 +45,14 @@
     "pinia": "^2.0.28",
     "readable-stream": "^4.2.0",
     "rollup": "^2.79.1",
+    "sortablejs-vue3": "^1.2.6",
     "uuid4": "^2.0.3",
     "vue": "^3.2.33",
     "vue-3-slider-component": "^0.1.0",
-    "vue-advanced-chat": "^2.0.6"
+    "vue-advanced-chat": "^2.0.6",
+    "vue3-popper": "^1.5.0",
+    "vuedraggable": "^4.1.0",
+    "express": "^4.18.2",
+    "socket.io": "^4.6.1"
   }
 }
